--- a/about.html
+++ b/about.html
@@ -50,17 +50,13 @@
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
           <div class="col-sm-6 ourStory">
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
-              quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-              eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
-              reprehenderit qui in ea voluptate velit esse.</p>
+            <p>Springhouse creates value by recognizing real estate opportunities before others do, understanding what is possible, and then applying our expertise in investment, operations, and management to unlock their full potential and deliver exceptional returns.<br><br>We focus on investments that are undervalued or ineffectively managed - properties that may on the surface appear challenging, but with the right application of design and operational savvy, can be turned around efficiently and generate long-term value.<br><br>Our approach is comprehensive. We consider every factor, from access to emerging consumer markets to neighborhood trends to cultural factors.  We partner with the top architects, designers, and contractors. We use our asset and property management expertise to ensure each of our properties generate maximum premiums against costs and investment.</p>
           </div>
           <div class="col-sm-6">
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+            <p>Ultimately, Springhouse views successful real estate investment a both a strategic and creative business. It takes the right experience, the right approach and the right execution. But, before any of this is possible, it takes the right creative vision.</p>
             <hr>
             <p class="quote text-xs-center">Combining entrepreneurial spirit with institutional execution</p>
             <hr>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit laborum.</p>
           </div>
         </div>
         <div class="row">
@@ -70,8 +66,12 @@
             <img class="media-fw" src="img/portrait.png">
           </div>
           <div class="col-sm-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            <p>Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, Mr. Verner leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Mr. Verner has successfully closed
+              in excess of $400 million of real estate assets across the mixed-use, multifamily and hospitality sectors. Prior to forming Springhouse, Mr. Verner was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments
+              in the New York Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development. Mr. Verner was also responsible for the management and oversight of the Grand Review portfolio, a
+              20 building collection of mixed-use assets spread throughout New York City. Prior to joining Urban American, Mr. Verner was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset
+              Management, a $10 billion hedge fund which specialized in the mixed-use, residential and hospitality sectors. Notable projects include the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion
+              of 147 Waverly Place in Manhattan, as well as the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
           </div>
         </div>
         <div class="row">
@@ -79,10 +79,10 @@
           <hr class="subtitle-hr">
           <div class="col-xs-6 remove-gutters">
             <ul class="remove-gutters">
-              <li><span>Irving Place</span>
+              <li><a href="irvingplace.html"><span>Irving Place</span></a>
                 <br>1342 Broadway
                 <br>55 Wythe Avenue</li>
-              <li><span>Columbia University</span>
+              <li><a href="columbiauniversity.html"><span>Columbia University</span></a>
                 <br>Meserole Condominium
                 <br>324 23rd Street
                 <br>98 Broad Boulevard
@@ -94,12 +94,12 @@
             <ul class="remove-gutters">
               <li>1342 Broadway
                 <br>55 Wythe Avenue</li>
-              <li><span>Bed-Stuy Miami Beach</span>
+              <li><a href="bedstuy.html"><span>Bed-Stuy Miami Beach</span></a>
                 <br>Meserole Condominium
                 <br>324 23rd Street
                 <br>Vanderbilt Residences
                 <br>Washington lofts</li>
-              <li><span>Williamsburg</span></li>
+              <li><a href="williamsburg.html"><span>Williamsburg</span></a></li>
             </ul>
           </div>
         </div>
