--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
+          <a class="nav-link active" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
@@ -46,19 +46,16 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p class="subtitle">Case Study</p>
-        <h1>Columbia University</h1>
+        <p>Select Projects</p>
+        <h1>The Harlem Renaissance</h1>
         <hr>
-        <p>Situated in a striking location on the corner of Irving Place and 17th St, this property occupies one of the most desirable sites in the city. Having been severely mismanaged by its prior owners, Springhouse saw a unique opportunity here to overhaul
-          the property and bring in tenants willing to pay a premium for an address in Gramercy Park. The property includes 46,500 square feet of apartment units, retail, and oﬃce space, with current rents set far below fair market rates. Springhouse
-          plans to renovate the building to attract retail tenants that better ft this upscale neighborhood. The renovations will include signifcant improvements to the gym and laundry room as well. Springhouse will bring rents for the mix of studio,
-          one, and two bed apartments to levels more in line with the surrounding properties.</p>
+        <p>This iconic Manhattan neighborhood has recently been revitalized,  driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem.  Springhouse recognized this opportunity and invested in these two 62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood.  Moreover, their proximity to Columbia University and multiple subway lines add to the significant upside potential.</p>
         <hr>
-        <p>56 apts, 5 retail spaces, 1 oﬃce space</p>
+        <p>52 apartments, 7 retail stores</p>
         <hr>
-        <p>6 story elevator building</p>
+        <p>15-minute commute to Midtown</p>
         <hr>
-        <p>8,300 square feet of retail space</p>
+        <p>5-minute walk to Columbia University</p>
         <hr>
         <img class="roundmap" src="img/roundmap.png">
       </div>
@@ -77,7 +74,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/122-East-23rd-Street.jpg">
+        <img src="img/columbia_render.png">
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/unionsquare.jpg">
         <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
