--- a/miamibeach.html
+++ b/miamibeach.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
+          <a class="nav-link active" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
@@ -46,20 +46,20 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p class="subtitle">Case Study</p>
-        <h1>Miami Beach</h1>
+        <p>Select Projects</p>
+        <h1>Hospitality Innovation</h1>
         <hr>
-        <p>Situated in a striking location on the corner of Irving Place and 17th St, this property occupies one of the most desirable sites in the city. Having been severely mismanaged by its prior owners, Springhouse saw a unique opportunity here to overhaul
-          the property and bring in tenants willing to pay a premium for an address in Gramercy Park. The property includes 46,500 square feet of apartment units, retail, and oﬃce space, with current rents set far below fair market rates. Springhouse
-          plans to renovate the building to attract retail tenants that better ft this upscale neighborhood. The renovations will include signifcant improvements to the gym and laundry room as well. Springhouse will bring rents for the mix of studio,
-          one, and two bed apartments to levels more in line with the surrounding properties.</p>
+        <p>As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.<br>Set to launch in 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated lobby and communal spaces, and vibrant food and beverage programs.</p>
         <hr>
-        <p>56 apts, 5 retail spaces, 1 oﬃce space</p>
+        <p>Blend of 70% shared rooms and 30% private rooms</p>
         <hr>
-        <p>6 story elevator building</p>
+        <p>5,000 square foot courtyard</p>
         <hr>
-        <p>8,300 square feet of retail space</p>
+        <p>F&amp;B to serve both hotel guests and Miami locals</p>
         <hr>
+        <p>Culturally relevant design and branding throughout</p>
+        <hr>
+        <p>Younger target audience (21 – 39)</p>
         <img class="roundmap" src="img/roundmap.png">
       </div>
       <div class="col-sm-6">
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/122-East-23rd-Street.jpg">
+        <img src="img/Miami_render.png">
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/unionsquare.jpg">
         <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
