--- a/press.html
+++ b/press.html
@@ -46,7 +46,7 @@
   <div class="container-fluid" id="press">
     <div class="row">
       <div class="col-sm-3">
-        <img class="press-logo" src="img/nylogo.png">
+        <img class="press-logo" src="img/TheRealDeal.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Springhouse pays $55,000,000 for Union Square gem</h1>
         <hr>
@@ -55,7 +55,7 @@
           retail tenants and one oﬃce unit.</p>
       </div>
       <div class="col-sm-3">
-        <img class="press-logo" src="img/wallstreetjournal+logo.png">
+        <img class="press-logo" src="img/TheWallStreetJournal.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Uptown Maintains Upside</h1>
         <hr>
@@ -74,7 +74,7 @@
           properties in the neighborhood.</p>
       </div>
       <div class="col-sm-3">
-        <img class="press-logo" src="img/rew_logo2.png">
+        <img class="press-logo" src="img/RealEstateWeekly.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Young guns set their sights on becoming tomorrow’s real estate success stories</h1>
         <hr>
@@ -86,7 +86,7 @@
     </div>
     <div class="row">
       <div class="col-sm-3">
-        <img class="press-logo" src="img/APAlogo.jpg">
+        <img class="press-logo" src="img/ArielPropertyAdvisors.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Adam Verner speaks on real estate investment panel at Columbia University</h1>
         <hr>
@@ -102,7 +102,7 @@
         <p>Springhouse Partners has purchased 105 Grand Avenue, a 38,500-square-foot, newly-constructed residential building in the Clinton Hill section of Brooklyn for $16 million, sources tell The Commercial Observer.</p>
       </div>
       <div class="col-sm-3">
-        <img class="press-logo" src="img/miamilogo.png">
+        <img class="press-logo" src="img/TheRealDeal_Florida.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Springhouse acquires prime mixed use asset in the heart of Miami Beach for $21,000,000</h1>
         <hr>
