--- a/williamsburg.html
+++ b/williamsburg.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
+          <a class="nav-link active" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
@@ -46,18 +46,16 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p class="subtitle">Case Study</p>
-        <h1>Williamsburg</h1>
+        <p>Select Projects</p>
+        <h1>The New Creative Class</h1>
         <hr>
-        <p>With this property, Springhouse identifed an opportunity to tap into the burgeoning creative class of East Williamsburg, an area that has become an attractive alternative to the East Village and Lower East Side. The property’s location in a vibrant
-          neighborhood and close proximity to public transit attracts a young demographic of creative professionals and college students. The property also boasts unique architecture and extensive amenities, including a gym, game room, and a massive rooftop
-          deck with views of the Manhattan skyline. The apartments, which include individual AC units and a video security system, can be converted into shared apartments to meet the needs of young tenants.</p>
+        <p>With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences.  The property features a prime location in a vibrant neighborhood,  close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan.  Moreover, many of the units can easy be converted into shared apartments, making them especially attractive to the young tenants.</p>
         <hr>
         <p>32 loft-style apartments</p>
         <hr>
-        <p>4 story building</p>
+        <p>4-story building</p>
         <hr>
-        <p>3000 square foot roof deck</p>
+        <p>3,000 square foot roof deck</p>
         <hr>
         <img class="roundmap" src="img/williamsburg-map.png">
       </div>
@@ -76,7 +74,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/122-East-23rd-Street.jpg">
+        <img src="img/Williamsburg.png">
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/walking.jpg">
         <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
