--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -49,7 +49,7 @@
         <p>Select Projects</p>
         <h1>The Harlem Renaissance</h1>
         <hr>
-        <p>This iconic Manhattan neighborhood has recently been revitalized,  driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem.  Springhouse recognized this opportunity and invested in these two 62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood.  Moreover, their proximity to Columbia University and multiple subway lines add to the significant upside potential.</p>
+        <p class="case-textblock">This iconic Manhattan neighborhood has recently been revitalized,  driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem.  Springhouse recognized this opportunity and invested in these two 62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood.  Moreover, their proximity to Columbia University and multiple subway lines add to the significant upside potential.</p>
         <hr>
         <p>52 apartments, 7 retail stores</p>
         <hr>
@@ -75,9 +75,9 @@
       </div>
       <div class="col-sm-3">
         <img src="img/columbia_render.png">
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/unionsquare.jpg">
-        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
@@ -87,10 +87,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
