--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     </div>
     <div class="row home-text">
       <div class="col-sm-6">
-        <p class="text-xs-left subtitle">Overview</p>
+        <p class="text-xs-left text-uppercase">Overview</p>
         <hr>
         <p>Springhouse Partners is a New York City based real estate investment frm that was founded in 2010. The frm manages capital on behalf of fnancial institutions, family oﬃces and private investors with a focus on capital preservation and value creation
           to generate superior risk adjusted returns over diﬀerent business and economic cycles.</p>
       </div>
       <div class="col-sm-3">
-        <p class="text-xs-left subtitle">Address</p>
+        <p class="text-xs-left text-uppercase">Address</p>
         <hr>
         <a href="">
           <p>Springhouse Partners
@@ -70,7 +70,7 @@
         </a>
       </div>
       <div class="col-sm-3">
-        <p class="text-xs-left subtitle">Contact</p>
+        <p class="text-xs-left text-uppercase">Contact</p>
         <hr>
         <a href="mailto:info@springhousepartners.com">
           <p>info@springhousepartners.com</p>
@@ -89,10 +89,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
