--- a/irvingplace.html
+++ b/irvingplace.html
@@ -49,7 +49,7 @@
         <p>Select Projects</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
-        <p>Successful investments begin by identifying potential value where others do not.  The property at Irving Place and 17th St. is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in below market rents. By reconfiguring and overhauling the space and enhancing the operations, Springhouse was able to attract a new group of tenants - including retail, commercial, and individuals - willing to pay a premium for a prestige location.</p>
+        <p class="case-textblock">Successful investments begin by identifying potential value where others do not.  The property at Irving Place and 17th St. is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in below market rents. By reconfiguring and overhauling the space and enhancing the operations, Springhouse was able to attract a new group of tenants - including retail, commercial, and individuals - willing to pay a premium for a prestige location.</p>
         <hr>
         <p>6-story elevator building</p>
         <hr>
@@ -79,9 +79,9 @@
       </div>
       <div class="col-sm-3">
         <img src="img/Irving_render.png">
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/unionsquare.jpg">
-        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
@@ -91,10 +91,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
