--- a/miamibeach.html
+++ b/miamibeach.html
@@ -49,7 +49,7 @@
         <p>Select Projects</p>
         <h1>Hospitality Innovation</h1>
         <hr>
-        <p>As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.<br>Set to launch in 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated lobby and communal spaces, and vibrant food and beverage programs.</p>
+        <p class="case-textblock">As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.<br>Set to launch in 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated lobby and communal spaces, and vibrant food and beverage programs.</p>
         <hr>
         <p>Blend of 70% shared rooms and 30% private rooms</p>
         <hr>
@@ -78,9 +78,9 @@
       </div>
       <div class="col-sm-3">
         <img src="img/Miami_render.png">
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/unionsquare.jpg">
-        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
@@ -90,10 +90,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
