--- a/press.html
+++ b/press.html
@@ -44,7 +44,7 @@
   </nav>
 
   <div class="container-fluid" id="press">
-    <div class="row">
+    <div class="row r1">
       <div class="col-sm-3">
         <img class="press-logo" src="img/TheRealDeal.png">
         <hr>
@@ -53,6 +53,7 @@
         <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property.
           <br>The six-story, 50,000-square-foot building at 51 Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property also has a roughly 10,000-square-foot commercial component holding five
           retail tenants and one oﬃce unit.</p>
+          <a href=""><p>Read more ></p></a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/TheWallStreetJournal.png">
@@ -61,7 +62,8 @@
         <hr>
         <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early.
           <br>Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was Treetop Development, a New Jersey investment
-          company that bought them for $8.8 million in 2012.
+          company that bought them for $8.8 million in 2012.</p>
+          <a href=""><p>Read more ></p></a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/Commercial-Observer.png">
@@ -72,6 +74,7 @@
           <br>The 65,000-square-foot building is located in the Clinton Hill neighborhood of Brooklyn, just a few blocks from the Pratt Institute.
           <br>“This area has seen signifcant positive changes over the past few years and we expect it to continue to gentrify,” said Adam Verner, president of Springhouse Partners, noting that $280 per square foot was a relative bargain compared to similar
           properties in the neighborhood.</p>
+          <a href=""><p>Read more ></p></a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/RealEstateWeekly.png">
@@ -82,6 +85,7 @@
           <br>In some circles, youth correlates with impatience and rash decisions, but these relative newcomers to the ferce and congested New York City market are identifying eﬀective strategies — and valuable assets — and sticking to them.
           <br>“Because I’m young, I tend to be a little bit more selective with the properties we invest in,” said 32-year-old Adam Verner, who founded Springhouse Partners in 2010. “It’s very important to me to make prudent investment decisions to be sure
           that these frst few deals are successful.”</p>
+          <a href=""><p>Read more ></p></a>
       </div>
     </div>
     <div class="row">
@@ -93,6 +97,7 @@
         <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000.
           <br>Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer, a private investor. “With newly renovated units delivered upon closing the buyer was
           able to capitalize on the scale of the property with an immediate increase in cash fow,” said Scot Hirschfeld, Vice President at Ariel Property Advisors.</p>
+          <a href=""><p>Read more ></p></a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/Commercial-Observer.png">
@@ -100,6 +105,7 @@
         <h1 class="text-xs-center quote-sm">Springhouse Pays $16,000,000 for 2nd Brooklyn Acquisition in Recent Months</h1>
         <hr>
         <p>Springhouse Partners has purchased 105 Grand Avenue, a 38,500-square-foot, newly-constructed residential building in the Clinton Hill section of Brooklyn for $16 million, sources tell The Commercial Observer.</p>
+        <a href=""><p>Read more ></p></a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/TheRealDeal_Florida.png">
@@ -109,6 +115,7 @@
         <p>A prime piece of Alton Road real estate sold for $21 million to a partnership of New York investors, according to Miami-Dade County records.
           <br>The five-story mixed-use property at 1700 Alton Road in Miami Beach includes retail, apartments and parking, according to a listing, and was built in 1923.
           <br>AC 1700 Alton Owner, an LLC with the same address as New York-based Springhouse Partners, was the listed </p>
+          <a href=""><p>Read more ></p></a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/Commercial-Observer.png">
@@ -116,6 +123,7 @@
         <h1 class="text-xs-center quote-sm">Springhouse Pays $16,000,000 for 2nd Brooklyn Acquisition in Recent Months</h1>
         <hr>
         <p>Springhouse Partners has purchased 105 Grand Avenue, a 38,500-square-foot, newly-constructed residential building in the Clinton Hill section of Brooklyn for $16 million, sources tell The Commercial Observer.<br>The sale was an oﬀ-market deal brokered by Sean Lefkovits, Joe Koicim and Peter Von Der Ahe of Marcus &amp; Millichap; and </p>
+        <a href=""><p>Read more ></p></a>
       </div>
     </div>
   </div>
@@ -125,10 +133,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
