--- a/bedstuy.html
+++ b/bedstuy.html
@@ -49,7 +49,7 @@
         <p>Select Projects</p>
         <h1>Higher Education</h1>
         <hr>
-        <p>With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very lucrative investment. That’s why Springhouse identified this Bedford Avenue property in Clinton Hill, Brooklyn as an great opportunity.  It boasts 43 units - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Parsons, The New School, The Culinary Institute, NYU, and other institutions.</p>
+        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very lucrative investment. That’s why Springhouse identified this Bedford Avenue property in Clinton Hill, Brooklyn as an great opportunity.  It boasts 43 units - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Parsons, The New School, The Culinary Institute, NYU, and other institutions.</p>
         <hr>
         <p>64,000 square feet</p>
         <hr>
@@ -75,9 +75,9 @@
       </div>
       <div class="col-sm-3">
         <img src="img/bedstuy_render.png">
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/unionsquare.jpg">
-        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
@@ -87,10 +87,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
