--- a/selectprojects.html
+++ b/selectprojects.html
@@ -92,10 +92,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class=" col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
