--- a/williamsburg.html
+++ b/williamsburg.html
@@ -49,7 +49,7 @@
         <p>Select Projects</p>
         <h1>The New Creative Class</h1>
         <hr>
-        <p>With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences.  The property features a prime location in a vibrant neighborhood,  close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan.  Moreover, many of the units can easy be converted into shared apartments, making them especially attractive to the young tenants.</p>
+        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences.  The property features a prime location in a vibrant neighborhood,  close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan.  Moreover, many of the units can easy be converted into shared apartments, making them especially attractive to the young tenants.</p>
         <hr>
         <p>32 loft-style apartments</p>
         <hr>
@@ -75,9 +75,9 @@
       </div>
       <div class="col-sm-3">
         <img src="img/Williamsburg.png">
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
         <img class="img-circle" src="img/walking.jpg">
-        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
@@ -87,10 +87,10 @@
       <div class="row">
         <hr class="footer-hr">
         <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners, LLC</p>
+          <p class="text-xs-left">Springhouse Partners</p>
         </div>
         <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
+          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
         </div>
       </div>
     </div>
